# new-word-extraction

./: README.md  main.py  setup.py
cpp/: CMakeLists.txt  Makefile  multi.sh  test.txt
cpp/include/: argparse.h  fastNewWords.h  infoEnt.h  myutils.h  simpleNewWords.h  trieNewWords.h
cpp/src/: fastNewWords.cpp  fastnewwords.cc  infoEnt.cpp  main.cpp  main_fast.cc  main_fast.cpp  main_simple.cpp  main_trie.cpp  myutils.cc  myutils.cpp  simpleNewWords.cc  trieNewWords.cpp
data/books/: renmingdemingyi.txt  tianlongbabu_jinyong.txt
data/dict/: stopwords.txt
demo/: run_mr_new_words.sh  test_discoverers.py
new_word_extraction/: constants.py
new_word_extraction/unsupervised/: infoEnt.py  trie.py
new_word_extraction/utils/: stats.py  test.py  utils.py
python/: setup.py
python/demo/: newwords.py  run_mr_new_words.sh  test_multicore.py
